--- a/frontend/src/components/Banner/banner.css
+++ b/frontend/src/components/Banner/banner.css
@@ -14,9 +14,11 @@
     background-color: var(--color-main-dark-grey);
     color: var(--color-secondary-white);    
     height: 8.125rem;
+    min-width: 100%;
     display: flex;
     font-size: 1.5rem;
-    font-family: "Nunito", sans-serif;               
+    font-family: "Nunito", sans-serif;
+    width: 100%;              
 }
 
 .banner-navigations {
@@ -24,28 +26,32 @@
     flex-direction: row;    
     align-items: center;
     gap: 4.063rem;
-    padding-left: 12%;    
+    padding-left: 12%;
+    background-color: var(--color-main-dark-grey);  
 }
 
 .banner-select-language {
     display: flex;
     align-items: center;     
-    flex-direction: row;    
+    flex-direction: row;
+    flex-wrap: nowrap;    
     gap: 5px;
-    padding-left: 34%;   
+    flex-flow: row;
+    padding-right: 12%;
+    padding-left: 34%;
+    background-color: var(--color-main-dark-grey);     
 }
 
-.banner-select-language-button {
+.banner-select-language-button { 
     display: flex;
-}
-
-.banner-select-language-button-text {    
     font-size: 1.5rem;
     background-color: var(--color-main-dark-grey);
     color: var(--color-secondary-white);
     border: 0px;
+    flex-wrap: nowrap;
+    background-color: var(--color-main-dark-grey);
 }
 
 .banner-select-language-button-chevron {
-    padding-left: 3px;
+    padding-left: 3px;    
 }
