--- a/frontend/src/components/Banner/banner.css
+++ b/frontend/src/components/Banner/banner.css
@@ -14,10 +14,10 @@
 .banner {
     background-color: var(--color-main-dark-grey);
     color: var(--color-secondary-white);    
-    height: 8.125rem;
-    min-width: 100%;
+    height: 12vh;
     display: flex;
     font-size: 1.5rem;
+    line-height: 1.5em;
     font-family: var(--font-family-main);
     width: 100%;              
 }
@@ -27,7 +27,7 @@
     flex-direction: row;    
     align-items: center;
     gap: 4.063rem;
-    padding-left: 12%;
+    padding-left: 12vw;
     background-color: var(--color-main-dark-grey);  
 }
 
@@ -38,8 +38,8 @@
     flex-wrap: nowrap;    
     gap: 5px;
     flex-flow: row;
-    padding-right: 12%;
-    padding-left: 34%;
+    padding-right: 12vw;
+    padding-left: 34vw;
     background-color: var(--color-main-dark-grey);     
 }
 
