--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -23,17 +23,20 @@
 
 .footer-main {
     display: flex;
+    overflow: hidden;
     justify-content: space-between;
     padding-left: 12vw;
-    padding-right: 12vw;        
+    padding-right: 12vw;
+    padding-top: 5vh;        
 }
 
 .footer-main-primary {
     display: flex;
-    flex-direction: column;       
+    flex-direction: column;
+    max-width: 50%;   
 }
 
-.footer-main-primary-title, footer-main-aside-title {
+.footer-main-primary-title, .footer-main-aside-title {
     font-size: 1.5rem;
     line-height: 1.5em;
     font-weight: bold;
@@ -42,7 +45,9 @@
 }
 
 .footer-main-primary-text {
+    padding-top: 3vh;
     width: 50vw;
+    flex-shrink: 3;
 }
 
 .footer-main-aside {
@@ -50,24 +55,37 @@
     flex-direction: column;
     align-self: flex-end;    
     margin-bottom: auto;
+    width: 12%;
+}
+
+.footer-main-aside-title {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer-main-aside-icons {
+    display: flex;
+    justify-content: space-around;  
 }
 
 .footer-line {
     align-self: center;        
     width: 76vw;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
 }
 
 .footer-copyright {
     align-self: center;
-    margin-top: auto;
-    margin-bottom: auto;     
+    margin-top: auto;     
 }
 
-.footer-copyright-link:visited, .footer-copyright-link:hover,
-.footer-main-aside-icons-hackerrank:visited, .footer-main-aside-icons-hackerrank:hover,
-.footer-main-aside-icons-github:visited, .footer-main-aside-icons-github:hover,
-.footer-main-aside-icons-linkedln:visited, .footer-main-aside-icons-linkedln:hover,
-.footer-main-aside-icons-medium:visited, .footer-main-aside-icons-medium:hover,
-.footer-main-aside-icons-kaggle:visited, .footer-main-aside-icons-kaggle:hover {
+.footer-copyright-link:visited, .footer-copyright-link:hover, .footer-copyright-link:link, .footer-copyright-link:active
+.footer-main-aside-icons-hackerrank:visited, .footer-main-aside-icons-hackerrank:hover, .footer-main-aside-icons-hackerrank:link, .footer-main-aside-icons-hackerrank:active,
+.footer-main-aside-icons-github:visited, .footer-main-aside-icons-github:hover, .footer-main-aside-icons-github:link, .footer-main-aside-icons-github:active,
+.footer-main-aside-icons-linkedln:visited, .footer-main-aside-icons-linkedln:hover, .footer-main-aside-icons-linkedln:link, .footer-main-aside-icons-linkedln:active,
+.footer-main-aside-icons-medium:visited, .footer-main-aside-icons-medium:hover, .footer-main-aside-icons-medium:link, .footer-main-aside-icons-medium:active,
+.footer-main-aside-icons-kaggle:visited, .footer-main-aside-icons-kaggle:hover, .footer-main-aside-icons-kaggle:link, .footer-main-aside-icons-kaggle:active
+{
     color: var(--color-secondary-white);    
 }
