--- a/frontend/src/components/Banner/banner.css
+++ b/frontend/src/components/Banner/banner.css
@@ -20,7 +20,8 @@
     line-height: 1.5em;
     font-family: var(--font-family-main);
     width: 100%;
-    justify-content: space-between;              
+    justify-content: space-between;
+    overflow: hidden;              
 }
 
 .banner-navigations {
