--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -17,8 +17,8 @@
     font-family: var(--font-family-main);
     background-color: var(--color-main-dark-grey);
     color: var(--color-secondary-white);
-    height: 20vh;
-    width: 100vw;    
+    height: 25vh;
+    width: 100vw;
 }
 
 .footer-main {
@@ -27,13 +27,14 @@
     justify-content: space-between;
     padding-left: 12vw;
     padding-right: 12vw;
-    padding-top: 5vh;        
+    padding-top: 5vh;    
 }
 
 .footer-main-primary {
     display: flex;
     flex-direction: column;
-    max-width: 50%;   
+    max-width: 50%;
+    overflow: visible;    
 }
 
 .footer-main-primary-title, .footer-main-aside-title {
@@ -45,9 +46,8 @@
 }
 
 .footer-main-primary-text {
-    padding-top: 3vh;
-    width: 50vw;
-    flex-shrink: 3;
+    padding-top: 2vh;
+    width: 50vw;    
 }
 
 .footer-main-aside {
@@ -55,12 +55,12 @@
     flex-direction: column;
     align-self: flex-end;    
     margin-bottom: auto;
-    width: 12%;
+    width: 9%;
 }
 
 .footer-main-aside-title {
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto;    
 }
 
 .footer-main-aside-icons {
@@ -72,15 +72,16 @@
     align-self: center;        
     width: 76vw;
     margin-top: 3vh;
-    margin-bottom: 3vh;
+    margin-bottom: 3vh;    
 }
 
 .footer-copyright {
     align-self: center;
-    margin-top: auto;     
+    margin-top: auto;
+    margin-bottom: 2vh;         
 }
 
-.footer-copyright-link:visited, .footer-copyright-link:hover, .footer-copyright-link:link, .footer-copyright-link:active
+.footer-copyright-link:visited, .footer-copyright-link:hover, .footer-copyright-link:link, .footer-copyright-link:active,
 .footer-main-aside-icons-hackerrank:visited, .footer-main-aside-icons-hackerrank:hover, .footer-main-aside-icons-hackerrank:link, .footer-main-aside-icons-hackerrank:active,
 .footer-main-aside-icons-github:visited, .footer-main-aside-icons-github:hover, .footer-main-aside-icons-github:link, .footer-main-aside-icons-github:active,
 .footer-main-aside-icons-linkedln:visited, .footer-main-aside-icons-linkedln:hover, .footer-main-aside-icons-linkedln:link, .footer-main-aside-icons-linkedln:active,
@@ -88,4 +89,15 @@
 .footer-main-aside-icons-kaggle:visited, .footer-main-aside-icons-kaggle:hover, .footer-main-aside-icons-kaggle:link, .footer-main-aside-icons-kaggle:active
 {
     color: var(--color-secondary-white);    
+}
+
+.footer-main-aside-icons-hackerrank,
+.footer-main-aside-icons-github,
+.footer-main-aside-icons-linkedln,
+.footer-main-aside-icons-medium {
+    font-size: 1.5rem;
+}
+
+.footer-main-aside-icons-kaggle {
+    font-size: 1.35rem;
 }
