--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -18,7 +18,7 @@
     background-color: var(--color-main-dark-grey);
     color: var(--color-secondary-white);
     height: auto;
-    min-height: 25vh;    
+    min-height: 40vh;    
     width: 100vw;        
 }
 
@@ -47,7 +47,8 @@
 
 .footer-main-primary-text {
     padding-top: 2vh;
-    width: 50vw;    
+    width: 50vw;
+    font-size: 1.5rem;    
 }
 
 .footer-main-aside {
@@ -55,7 +56,7 @@
     flex-direction: column;
     align-self: flex-end;    
     margin-bottom: auto;
-    width: 9%;
+    width: 10%;
 }
 
 .footer-main-aside-title {
@@ -65,7 +66,7 @@
 
 .footer-main-aside-icons {
     display: flex;
-    justify-content: space-around;  
+    gap: 3px;  
 }
 
 .footer-line {
