--- a/frontend/src/components/Home/home.css
+++ b/frontend/src/components/Home/home.css
@@ -17,13 +17,17 @@
     font-family: var(--font-family-main);
     align-items: center;
     justify-content: center;
-    min-height: 88vh;
+    min-height: 95vh; /*88vh*/
     padding-top: 4rem;
 }
 
 .home-image {
     border-radius: 50%;
     width: 9.375rem;
+    box-shadow:
+        0 2px 1px rgba(0, 0, 0, 0.05),
+        0 2px 3px rgba(0, 0, 0, 0.05),
+        0 4px 8px rgba(0, 0, 0, 0.05);
 }
 
 .home-title {
@@ -55,6 +59,7 @@
     flex-direction: row;
     margin-top: auto;
     margin-bottom: auto;
+    padding-top: 3%;
     gap: 2rem;
 }
 
@@ -92,5 +97,47 @@
     font-size: 2rem;
     margin: auto;
     padding-top: 5px;
+}
+
+.home-arrow-animation {
+    margin-top: auto;
+    padding-top: 4%;
+    padding-bottom: 4%;
+    transform: translate(-50%, -50%);
+    transform: rotate(0deg);
+    cursor: pointer;
+}
+
+.home-arrow-animation span {
+    display: block;
+    width: 1.2vw;
+    height: 1.2vw;
+    border-bottom: 5px solid var(--color-main-dark-grey);
+    border-right: 5px solid var(--color-main-dark-grey);
+    transform: rotate(45deg);
+    margin: -10px;
+    animation: animate 2s infinite;
+}
+
+.home-arrow-animation span:nth-child(2) {
+    animation-delay: -0.2s;
+}
+
+.home-arrow-animation span:nth-child(3) {
+    animation-delay: -0.4s;
+}
+
+@keyframes animate {
+    0% {
+        opacity: 0;
+        transform: rotate(45deg) translate(-20px, -20px);
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: rotate(45deg) translate(20px, 20px);
+    }
 }
 
