Development html of contact, css left side of contact, and about margin to padding adjustment.

--- a/frontend/src/components/Contact/contact.css
+++ b/frontend/src/components/Contact/contact.css
@@ -3,10 +3,85 @@
 :root {
     --color-main-dark-grey: #4C4C4C;
     --color-secondary-white: #FFFFFF;
+    --color-detail-blue: #43B1F9;
     --font-family-main: "Nunito", sans-serif;
 }
 
 * {
    margin: 0; 
    padding: 0;    
+}
+
+.contact {
+    display: flex;
+    font-family: var(--font-family-main);
+    min-height: 100vh;
+    padding-top: 6vh;    
+    padding-left: 6vw;
+    padding-right: 6vw;    
+    justify-content: space-between;
+    gap: 8%;
+}
+
+.contact-main {
+    display: flex;
+    flex-direction: column;
+    padding-top: 5%;    
+}
+
+.contact-main-item:nth-child(2) {
+    padding-bottom: 12%;
+}
+
+.contact-main-item:nth-child(3) {
+    padding-bottom: 8%;
+}
+
+#contact-main-title {
+    font-size: 3.5rem;    
+}
+
+#contact-main-subtitle {
+    font-size: 2.5rem;
+}
+
+#contact-main-media {
+    font-size: 1.5rem;
+}
+
+#contact-main-media-card {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5vh;
+}
+
+.contact-main-media-card {
+    align-self: center;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    width: 24vw;
+    height: 10vh;
+    border: 1px solid var(--color-secondary-light-grey);
+    box-shadow:
+        0 2px 1px rgba(0, 0, 0, 0.05),
+        0 2px 3px rgba(0, 0, 0, 0.05),
+        0 4px 8px rgba(0, 0, 0, 0.05);
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+}
+
+.contact-main-media-card-text {
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+}
+
+.contact-main-media-card-icon {
+    font-size: 3rem;    
+}
+
+.contact-main-media-card-text-link {
+    color: var(--color-detail-blue);
 }
