--- a/frontend/src/components/About/about.css
+++ b/frontend/src/components/About/about.css
@@ -16,10 +16,10 @@
     display: flex;
     flex-direction: row;
     min-height: 100vh;
-    margin-top: 6vh;
-    margin-bottom: 6vh;
-    margin-left: 6vw;
-    margin-right: 6vw;    
+    padding-top: 6vh;
+    padding-bottom: 6vh;
+    padding-left: 6vw;
+    padding-right: 6vw;    
     justify-content: space-between;
     gap: 8%;    
 }
