Desenvolvimento seção projetos.

--- a/frontend/src/components/Projects/projects.css
+++ b/frontend/src/components/Projects/projects.css
@@ -45,3 +45,16 @@
     width: 36.45vw;
     min-height: 46vh;
 }
+
+.projects-cards-card-image {
+    height: 70%;
+}
+
+.projects-cards-card-title {
+    font-size: 2rem;
+}
+
+.projects-cards-card-subtitle {
+    font-size: 1rem;
+    color: var(--color-font-medium-grey);
+}
