--- a/frontend/src/components/ui/StandardButton/standardButton.css
+++ b/frontend/src/components/ui/StandardButton/standardButton.css
@@ -11,12 +11,14 @@
 }
 
 .standard-button {
-    text-align: center;   
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #43B1F9;
     font-size: 1.2rem;
     border: 2rem;
     width: 11vw;
-    height: 6.5vh;
+    height: 6.5vh;    
     align-self: center;
     box-shadow:
         0 2px 1px rgba(0, 0, 0, 0.25),
