Graph of project article page finalized.

--- a/frontend/src/pages/ProjectArticle/projectArticle.css
+++ b/frontend/src/pages/ProjectArticle/projectArticle.css
@@ -55,3 +55,11 @@
     padding-bottom: var(--padding-between);
 }
 
+#technology-used {
+    padding-bottom: var(--padding-between);    
+}
+
+#pie-chart {
+    align-self: center;
+}
+
