--- a/frontend/src/components/ui/MediaCard/mediaCard.css
+++ b/frontend/src/components/ui/MediaCard/mediaCard.css
@@ -5,7 +5,6 @@
 }
 
 .media-card {
-    
     display: flex;
     flex-direction: row;
     gap: 1rem;
@@ -17,6 +16,7 @@
     display: flex;
     flex-direction: column;
     font-size: 1rem;
+    padding-right: 1rem;
 }
 
 .media-card-icon {
