--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 .body {    
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     box-sizing: border-box;
     height: auto; 
 }
