--- a/frontend/src/layout/Banner/banner.css
+++ b/frontend/src/layout/Banner/banner.css
@@ -48,6 +48,10 @@
     background-color: var(--color-main-dark-grey);     
 }
 
+.side-bar {
+    display: none;
+}
+
 @media only screen and (max-width: 980px) {
 
     .banner-link {
@@ -55,6 +59,10 @@
     }
 
     .banner-navigations-menu {
+        display: block;
+    }
+
+    .side-bar {
         display: block;
     }
 
