Turning about page more responsive.

--- a/frontend/src/pages/About/about.css
+++ b/frontend/src/pages/About/about.css
@@ -26,7 +26,7 @@
 }
 
 .about-main {
-    height: 85vh;
+    height: 100vh;
     display: flex;
     flex-flow: column;    
     font-family: var(--font-family-main);
@@ -40,14 +40,50 @@
     padding-top: 2rem;
 }
 
-.about-main-title {
-    font-size: 3.5rem;
-}
-
-.about-main-text {
-    font-size: 1.5rem;    
-}
-
 .about-image {
     height: 85vh;
+}
+
+@media only screen and (max-width: 980px) {
+
+    .about {
+        flex-direction: column;
+    }
+
+    .about-main-title {
+        font-size: 1.5rem;
+    }
+    
+    .about-main-text {
+        font-size: 1rem;    
+    }
+
+    .about-image {
+        display: none;
+    }
+
+}
+
+@media only screen and (min-width: 980px) {
+
+    .about-main-title {
+        font-size: 2.5rem;
+    }
+    
+    .about-main-text {
+        font-size: 1.5rem;    
+    }
+
+}
+
+@media only screen and (min-width: 1280px) {
+
+    .about-main-title {
+        font-size: 3.5rem;
+    }
+    
+    .about-main-text {
+        font-size: 1.5rem;    
+    }
+
 }
