--- a/frontend/src/pages/Home/home.css
+++ b/frontend/src/pages/Home/home.css
@@ -17,7 +17,7 @@
     font-family: var(--font-family-main);
     align-items: center;
     justify-content: center;
-    min-height: 88vh; /*88vh*/
+    min-height: 88vh;
     padding-top: 1rem;
 }
 
@@ -57,8 +57,8 @@
 .home-icons {
     display: flex;
     flex-direction: row;    
-    padding-top: 3%;
-    padding-bottom: 5%;
+    padding-top: 8%;
+    padding-bottom: 8%;
     gap: 2rem;
     align-items: center;
 }
@@ -103,3 +103,30 @@
     }
 }
 
+@media only screen and (max-width: 980px) {
+
+    .home-title {
+        font-size: 2.0rem;
+        padding-right: 8vw;
+        padding-left: 8vw;
+    }
+    
+    .home-subtitle {
+        font-size: 1.25rem;
+        padding-right: 8vw;
+        padding-left: 8vw;
+    }
+
+    .home-text {
+        font-size: 1rem;
+        padding-top: 3rem;
+        padding-right: 8vw;
+        padding-left: 8vw;
+    }
+
+    .home-icons {
+        padding-top: 10vh;
+        padding-bottom: 10vh;        
+    }
+
+}
