--- a/frontend/src/layout/SideBar/sideBar.css
+++ b/frontend/src/layout/SideBar/sideBar.css
@@ -13,6 +13,7 @@
 }
 
 .side-bar {
+    font-family: var(--font-family-main);
     background-color: var(--color-main-dark-grey);
     color: var(--color-secondary-white);
     width: 300px;
