--- a/frontend/src/components/ui/StandardButton/standardButton.css
+++ b/frontend/src/components/ui/StandardButton/standardButton.css
@@ -19,7 +19,7 @@
     background-color: var(--color-button);
     font-size: 1.2rem;
     border: 2rem;
-    height: 8vh;
+    min-height: 5vh;
     box-shadow:
         0 2px 1px rgba(0, 0, 0, 0.25),
         0 2px 3px rgba(0, 0, 0, 0.25),
