Changing the texts of the website.

--- a/frontend/src/pages/About/about.css
+++ b/frontend/src/pages/About/about.css
@@ -19,7 +19,8 @@
     min-height: 100vh;
     padding-top: 6vh;
     padding-left: 6vw;
-    padding-right: 6vw;    
+    padding-right: 6vw;
+    padding-bottom: 3vw;    
     justify-content: space-between;
     gap: 8%;
 }
