--- a/frontend/src/pages/Home/home.css
+++ b/frontend/src/pages/Home/home.css
@@ -72,8 +72,8 @@
 
 .home-arrow-animation span {
     display: block;
-    width: 1.2vw;
-    height: 1.2vw;
+    width: 24px;
+    height: 24px;
     border-bottom: 5px solid var(--color-main-dark-grey);
     border-right: 5px solid var(--color-main-dark-grey);
     transform: rotate(45deg);
