--- a/frontend/src/components/BannerLink/bannerLink.css
+++ b/frontend/src/components/BannerLink/bannerLink.css
@@ -1,3 +1,7 @@
+:root {
+    --color-secondary-white: #FFFFFF;
+}
+
 .banner-link:visited, .banner-link:hover, .banner-link:link, .banner-link:active {
     color: var(--color-secondary-white);
     text-decoration: none;
