--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+}
 
 .app {    
     overflow-x: hidden;
